0.5 (2015-04-19):
* Do not let `yum upgrade` go interactive.
* Print commands before `sudo` so that they can be cut-and-pasted (#4).
* Double-check the installation of multiple RPMs as the exit code
  can be unreliable (#9).
* Add support for Gentoo and Arch Linux (#11).

0.4 (2015-03-22):
* Add `-u` or `--update` flag to trigger an OS package set update
  before performing external dependency installation. This is useful
  on Debian or Ubuntu where package installation may fail if the
  sets are not up-to-date with respect to latest security updates.
* Fix installation of source packages.
* Detect the CentOS distribution correctly.
* Fix external command detection to not go through a subshell.

0.3 (2015-01-27):
* Add OCaml 3.12.1 compatibility.
* Add `-i` flag to perform OPAM package installation after the
  external OS dependencies are installed.
* Fixes for MacPorts and CentOS support.

0.2 (2015-01-21):
* Initial public release.