@@ -1,0 +1,8 @@
+language: c
+install: wget https://raw.githubusercontent.com/ocaml/ocaml-travisci-skeleton/master/.travis-opam.sh
+script: bash -ex .travis-opam.sh
+env:
+  - PACKAGE="opam-depext" OCAML_VERSION=latest POST_INSTALL_HOOK="opam depext async_ssl"
+  - PACKAGE="opam-depext" OCAML_VERSION=4.01   POST_INSTALL_HOOK="opam depext mirage"
+  - PACKAGE="opam-depext" OCAML_VERSION=4.00   POST_INSTALL_HOOK="opam depext ssl"
+  - PACKAGE="opam-depext" OCAML_VERSION=3.12   POST_INSTALL_HOOK="opam depext pcre"
