@@ -4,6 +4,7 @@
 * Double-check the installation of multiple RPMs as the exit code
   can be unreliable (#9).
 * Add support for Gentoo and Arch Linux (#11).
+* Add Travis CI scripts.
 
 0.4 (2015-03-22):
 * Add `-u` or `--update` flag to trigger an OS package set update
